--- a/news_aggregator/app/news_aggregaator/public/styles/homepage_index.css
+++ b/news_aggregator/app/news_aggregaator/public/styles/homepage_index.css
@@ -116,6 +116,16 @@ button.profile{
   left: calc(50% + 320px);
   background-color: transparent
 }
+.notification{
+  font-weight: 1000;
+  font-family: var(--font-poppins);
+  font-size: x-large;
+  color: #525252;
+  position: absolute;
+  margin: 0 !important;
+  left: calc(50% + 320px);
+  background-color: transparent
+}
 .search{
   font-weight: 1000;
   font-family: var(--font-poppins);
@@ -136,4 +146,57 @@ button.profile{
   display: inline-block;
   margin-right: 1.5rem;
   margin-top: 1.3rem;
+}
+
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.profile-dropdown-btn {
+  background-color: transparent;
+  border: none;
+  padding: 0.25rem;
+  outline: none;
+  cursor: pointer;
+}
+
+.profile-dropdown-btn img {
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+}
+
+
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  right: 0;
+  top: 100%;
+  background-color: #fff;
+  min-width: 160px;
+  box-shadow: 0 8px 16px rgba(0,0,0,0.15);
+  z-index: 1;
+  border-radius: 8px;
+  overflow: hidden;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  transition: background 0.2s;
+}
+
+.dropdown-content a:hover {
+  background-color: #f1f1f1;
 }
