--- a/news_aggregator/app/news_aggregaator/views/ProfilePage.ejs
+++ b/news_aggregator/app/news_aggregaator/views/ProfilePage.ejs
@@ -10,21 +10,12 @@
   </head>
 
   <body>
-    <div class="home-desktop" data-animate-on-scroll>
-      <div class="header">
-        <img class="header-child" alt="" src="" />
-        <button class="home" onclick="redirectToUrl('/home')" style="font-weight: bold;">Home</button>
-        <button class="search" onclick="redirectToUrl('/search')" style="font-weight: bold;">Search</button>
-        <button class="create-post" onclick="redirectToUrl('/createpost')" style="font-weight: bold;">Create Post</button>
-        <button class="profile" onclick="redirectToUrl('/profile')">
-          <img src="/images/profile.png" />
-        </button>
-      </div>
+    <%- include('navbar.ejs') %>
 
       <div class="container">
         <div class="form">
           <b>Username:</b> <%= user.name %><br /><br />
-          <b>Email:</b> <%= user.email %><br /><br />
+          <b>Email:</b> <b%= user.email %><br /><br />
           <b><a href="/profile/followers/<%= user._id %>">Followers:</a></b> <%= user.followers.length %><br /><br />
           <b><a href="/profile/following/<%= user._id %>">Following:</a></b> <%= user.following.length %><br /><br />
 
